k8s-ha-cluster-lifecycle/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-django-sample-app
spec:
  type: NodePort
  selector:
    app: sample-python-app
  ports:
  - port: 80
    targetPort: 8000
    nodePort: 30007
